clusters/cl01tl/manifests/code-server/Deployment-code-server-cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server-cloudflared
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cloudflared
    app.kubernetes.io/version: 2026.3.0
    helm.sh/chart: cloudflared-2.4.0
  namespace: code-server
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: cloudflared
      app.kubernetes.io/instance: code-server
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: code-server
        app.kubernetes.io/name: cloudflared
    spec:
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - args:
            - tunnel
            - --protocol
            - http2
            - --no-autoupdate
            - run
            - --token
            - $(CF_MANAGED_TUNNEL_TOKEN)
          image: cloudflare/cloudflared:2026.3.0
          imagePullPolicy: IfNotPresent
          name: main
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
