clusters/cl01tl/manifests/code-server/Service-code-server.yaml
---
# Source: code-server/charts/code-server/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  labels:
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: code-server
    app.kubernetes.io/service: code-server
    helm.sh/chart: code-server-4.5.0
  namespace: code-server
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/name: code-server
