clusters/cl01tl/manifests/code-server/HTTPRoute-code-server.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  labels:
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: code-server
    helm.sh/chart: code-server-4.6.2
  namespace: code-server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "code-server.alexlebens.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: code-server
          namespace: code-server
          port: 8443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
