clusters/cl01tl/manifests/code-server/HTTPRoute-http-route-code-server.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-code-server
  namespace: code-server
  labels:
    app.kubernetes.io/name: http-route-code-server
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/part-of: code-server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - code-server.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: code-server
          port: 8443
          weight: 100
