clusters/cl01tl/manifests/code-server/code-server.yaml
---
# Source: code-server/charts/code-server/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  labels:
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: code-server
    app.kubernetes.io/service: code-server
    helm.sh/chart: code-server-4.4.0
  namespace: code-server
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/name: code-server
---
# Source: code-server/charts/cloudflared/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server-cloudflared
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cloudflared
    app.kubernetes.io/version: 2025.10.0
    helm.sh/chart: cloudflared-1.23.0
  namespace: code-server
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: cloudflared
      app.kubernetes.io/instance: code-server
  template:
    metadata:
      labels: 
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: code-server
        app.kubernetes.io/name: cloudflared
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers: 
        - args:
          - tunnel
          - --protocol
          - http2
          - --no-autoupdate
          - run
          - --token
          - $(CF_MANAGED_TUNNEL_TOKEN)
          image: cloudflare/cloudflared:2025.11.1
          imagePullPolicy: IfNotPresent
          name: main
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
---
# Source: code-server/charts/code-server/templates/common.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: code-server
    helm.sh/chart: code-server-4.4.0
  namespace: code-server
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: code-server
      app.kubernetes.io/instance: code-server
  template:
    metadata:
      labels: 
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: code-server
        app.kubernetes.io/name: code-server
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers: 
        - env:
          - name: TZ
            value: US/Central
          - name: PUID
            value: "1000"
          - name: PGID
            value: "1000"
          - name: DEFAULT_WORKSPACE
            value: /config
          image: ghcr.io/linuxserver/code-server:4.106.2@sha256:a98afdbcb59559f11e5e8df284062e55da1076b2e470e13db4aae133ea82bad0
          imagePullPolicy: IfNotPresent
          name: main
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
          volumeMounts:
          - mountPath: /config
            name: config
      volumes: 
        - name: config
          persistentVolumeClaim:
            claimName: code-server-nfs-storage
---
# Source: code-server/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-code-server
  namespace: code-server
  labels:
    app.kubernetes.io/name: http-route-code-server
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/part-of: code-server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - code-server.alexlebens.net
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: ''
          kind: Service
          name: code-server
          port: 8443
          weight: 100
